@@ -4,11 +4,11 @@ sm - Command-line interface to the INN storage manager
 
 =head1 SYNOPSIS
 
-B<sm> [B<-dHiqRrS>] [I<token> ...]
+B<sm> [B<-cdHiqRrSs>] [I<token> ...]
 
 =head1 DESCRIPTION
 
-The INN storage manager is the subsystesm that stores and keeps track of
+The INN storage manager is the subsystem that stores and keeps track of
 all of the articles and what storage backend they're in.  All stored
 articles are assigned a storage API token.  B<sm> is a command-line
 interface to that storage manager, primarily used to retrieve articles by
@@ -16,11 +16,11 @@ those tokens but also to perform other operations on the storage
 subsystem.
 
 I<token> is the token of an article (the same thing that's returned by
-B<grephistory> or stored in the history file).  It looks something like:
+B<grephistory> or stored in the F<history> file).  It looks something like:
 
     @0502000005A4000000010000000000000000@
 
-Any number of tokens can be given on the command line for any function
+Any number of tokens can be given on the command-line for any function
 other than B<-s>.  If none are, B<sm> normally reads tokens from standard
 input, one per line.  The default operation is to retrieve and write to
 standard output the corresponding article for each token given.
@@ -36,16 +36,23 @@ therefore only useful under very specific circumstances.
 
 =over 4
 
+=item B<-c>
+
+Show a clear, decoded form of the storage API token.  Each part of the token
+is explained, in a human-readable string.  Amongst other elements, this
+command gives the path to where the corresponding article is supposed
+to be stored.
+
 =item B<-d>, B<-r>
 
 Rather than retrieving the specified article, remove the article.  This
 will delete the article out of the news spool and it will not subsequently
 be retrievable by any part of INN.  It's equivalent to C<ctlinnd cancel>
-except it takes a storage API token instead of a message ID.
+except it takes a storage API token instead of a message-ID.
 
 =item B<-H>
 
-Retrieve only the header of the article rather than the entire article.
+Retrieve only the headers of the article rather than the entire article.
 This option cannot be used with B<-d>, B<-r>, B<-i>, or B<-S>.
 
 =item B<-i>
@@ -62,15 +69,15 @@ Suppress all error messages except usage errors.
 =item B<-R>
 
 Display the raw article.  This means that line endings won't be converted
-to native line endings and will be left as CRLF sequences, leading periods
+to native line endings and will be left as CRLF sequences; leading periods
 will still be escaped for sending over NNTP, and the article will end in
 a CRLF.CRLF sequence.
 
 =item B<-S>
 
-Write the article to standard output in the format used by rnews spool
+Write the article to standard output in the format used by B<rnews> spool
 files.  Multiple articles can be written in this format, and the resulting
-output can be fed to rnews (on another system, for example) to inject
+output can be fed to B<rnews> (on another system, for example) to inject
 those articles into INN.  This option cannot be used with B<-d>, B<-r>,
 B<-H>, B<-i>, or B<-R>.
 
@@ -93,7 +100,7 @@ successfully removed, but the sixth article couldn't be found, B<sm> will
 still exit with status 1.
 
 This means that if you need to be sure whether a particular operation
-succeeded, you should run sm on one token at a time.
+succeeded, you should run B<sm> on one token at a time.
 
 =head1 HISTORY
 
