@@ -15,6 +15,7 @@ bool cnfs_cancel(TOKEN token);
 bool cnfs_ctl(PROBETYPE type, TOKEN *token, void *value);
 bool cnfs_flushcacheddata(FLUSHTYPE type);
 void cnfs_printfiles(FILE *file, TOKEN token, char **xref, int ngroups);
+char *cnfs_explaintoken(const TOKEN token);
 void cnfs_shutdown(void);
 
 #endif
